fixing blinking issue on firefox

--- a/style.css
+++ b/style.css
@@ -88,24 +88,24 @@ html{
 
 @keyframes blink {
     0% { 
-        ry: 3.5; 
+        ry: 3.5px; 
     }
     50% { 
-        ry: 3.5; 
+        ry: 3.5px; 
     }
     60% { 
-        ry: 0; 
+        ry: 0.5px; 
     }
     90% { 
-        ry: 3.5; 
+        ry: 3.5px; 
     }
     92% { 
-        ry: 0; 
+        ry: 0.5px; 
     }
     95% { 
-        ry: 3.5; 
+        ry: 3.5px; 
     }
-    100% { 
-        ry: 0; 
+    100% {
+        ry: 0.5px;
     }
 }
